If applied, this lets user edit/change client support needs connecting to CLA Backend

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -179,7 +179,7 @@
   ]
 }) }}
 
-{% if data.clientSupportNeeds %}
+{% if not data.clientSupportNeeds.no_adaptations_required %}
   {# Client support needs summary card #}
   {{ summaryCardComponent({
     data: constructedData,
