If applied, this lets users change existing third party details for the client

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -59,7 +59,7 @@
 
 {% set relationshipToClient %}
   {% if data.thirdParty.relationshipToClient %}
-    {{ t('common.values.thirdPartyRelationship.' + data.thirdParty.relationshipToClient) }}
+    {{ t('common.thirdPartyRelationship.text.' + data.thirdParty.relationshipToClient) }}
   {% else %}
     ""
   {% endif %}
