--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -117,30 +117,30 @@
     errorMessage: errorMessages.thirdPartyRelationshipToClient if error,
     fieldset: {
       legend: {
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.titleH2'),
+        text: t('forms.clientDetails.thirdParty.relationshipToClient.title'),
         classes: "govuk-fieldset__legend--m"
       }
     },
     items: [
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.parentOrGuardian'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.parentOrGuardian')
+        value: t('common.thirdPartyRelationship.value.PARENT_GUARDIAN'),
+        text: t('common.thirdPartyRelationship.text.PARENT_GUARDIAN')
       },
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOrFriend'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOrFriend')
+        value: t('common.thirdPartyRelationship.value.FAMILY_FRIEND'),
+        text: t('common.thirdPartyRelationship.text.FAMILY_FRIEND')
       },
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.professional'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.professional')
+        value: t('common.thirdPartyRelationship.value.PROFESSIONAL'),
+        text: t('common.thirdPartyRelationship.text.PROFESSIONAL')
       },
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.legalAdvisor'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.legalAdvisor')
+        value: t('common.thirdPartyRelationship.value.LEGAL_ADVISOR'),
+        text: t('common.thirdPartyRelationship.text.LEGAL_ADVISOR')
       },
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.other'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.other')
+        value: t('common.thirdPartyRelationship.value.OTHER'),
+        text: t('common.thirdPartyRelationship.text.OTHER')
       }
     ]
   }) }}
@@ -181,24 +181,24 @@
         divider: "or"
       },
       {
-        value: t('forms.clientDetails.thirdParty.passphrase.noClientIsAChildOrPatient'),
-        text: t('forms.clientDetails.thirdParty.passphrase.noClientIsAChildOrPatient')
+        value: t('common.thirdPartyReason.value.CHILD_PATIENT'),
+        text: t('common.thirdPartyReason.text.CHILD_PATIENT')
       },
       {
-        value: t('forms.clientDetails.thirdParty.passphrase.noClientIsSubjectToPowerOfAttorney'),
-        text: t('forms.clientDetails.thirdParty.passphrase.noClientIsSubjectToPowerOfAttorney')
+        value: t('common.thirdPartyReason.value.POWER_ATTORNEY'),
+        text: t('common.thirdPartyReason.text.POWER_ATTORNEY')
       },
       {
-        value: t('forms.clientDetails.thirdParty.passphrase.noClientCannotCommunicateOnThePhoneDueToDisability'),
-        text: t('forms.clientDetails.thirdParty.passphrase.noClientCannotCommunicateOnThePhoneDueToDisability')
+        value: t('common.thirdPartyReason.value.NO_TELEPHONE_DISABILITY'),
+        text: t('common.thirdPartyReason.text.NO_TELEPHONE_DISABILITY')
       },
       {
-        value: t('forms.clientDetails.thirdParty.passphrase.noClientCannotCommunicateOnThePhoneDueToALanguageRequirement'),
-        text: t('forms.clientDetails.thirdParty.passphrase.noClientCannotCommunicateOnThePhoneDueToALanguageRequirement')
+        value: t('common.thirdPartyReason.value.NO_TELEPHONE_LANGUAGE'),
+        text: t('common.thirdPartyReason.text.NO_TELEPHONE_LANGUAGE')
       },
       {
-        value: t('forms.clientDetails.thirdParty.passphrase.noForAnotherReason'),
-        text: t('forms.clientDetails.thirdParty.passphrase.noForAnotherReason')
+        value: t('common.thirdPartyReason.value.OTHER'),
+        text: t('common.thirdPartyReason.text.OTHER')
       }
     ]
   }) }}
