If applied, this updates the data extraction, posting and getting of the third party details for passphrase

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -50,10 +50,10 @@
 {% set addressWithPostcodeThirdParty = renderAddress(data.thirdParty.address, data.thirdParty.postcode) %}
 
 {% set passphraseContent %}
-  {% if data.thirdParty.passphraseSetUp.selected[0] === "Yes" %}
-    {{ data.thirdParty.passphraseSetUp.passphrase }}
+  {% if data.thirdParty.passphrase %}
+    {{ data.thirdParty.passphrase }}
   {% else %}
-    {{ data.thirdParty.passphraseSetUp.selected[0] }}
+    {{ t('common.thirdPartyReason.text.' + data.thirdParty.noContactReason) }}
   {% endif %}
 {% endset %}
 
