If applied, this fixes linting issues and tidies up conditional reveal mechanism

--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -159,7 +159,7 @@
 
   {{ govukRadios({
     name: "thirdPartyPassphraseSetUp",
-    value: 'Yes' if (currentThirdPartyPassphrase != '') else currentThirdPartyPassphraseSetUp,
+    value: currentThirdPartyPassphraseSetUp,
     errorMessage: errorMessages.thirdPartyPassphraseSetUp if error,
     fieldset: {
       legend: {
