keeping a header in because this version of the docs system requires it.

--- a/docs/source/documentation/index.html.md.erb
+++ b/docs/source/documentation/index.html.md.erb
@@ -1,5 +1,6 @@
 <!-- Masthead and call to action -->
 <main id="main" role="main">
+    <h1>Manage Your Civil Cases</h1>
 </main>
 
 ## Getting Started
