EL-2751: Feature so that users change existing third party details for the client (#342)
* If applied:
- this lets users change existing third party details for the client
- updates the data extraction, posting and getting of the third party details for passphrase
- fixes linting issues and tidies up conditional reveal mechanism

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -50,16 +50,16 @@
 {% set addressWithPostcodeThirdParty = renderAddress(data.thirdParty.address, data.thirdParty.postcode) %}
 
 {% set passphraseContent %}
-  {% if data.thirdParty.passphraseSetUp.selected[0] === "Yes" %}
-    {{ data.thirdParty.passphraseSetUp.passphrase }}
+  {% if data.thirdParty.passphrase %}
+    {{ data.thirdParty.passphrase }}
   {% else %}
-    {{ data.thirdParty.passphraseSetUp.selected[0] }}
+    {{ t('common.thirdPartyReason.text.' + data.thirdParty.noContactReason) }}
   {% endif %}
 {% endset %}
 
 {% set relationshipToClient %}
   {% if data.thirdParty.relationshipToClient %}
-    {{ t('common.values.thirdPartyRelationship.' + data.thirdParty.relationshipToClient) }}
+    {{ t('common.thirdPartyRelationship.text.' + data.thirdParty.relationshipToClient) }}
   {% else %}
     ""
   {% endif %}
