adding locales docs

--- a/docs/source/documentation/index.html.md.erb
+++ b/docs/source/documentation/index.html.md.erb
@@ -14,5 +14,8 @@
 ## Deployment
 - [Deployment](documentation/deployment.html)
 
+## Locales and Internationalization
+- [Locales and Internationalization](documentation/locales.html)
+
 ## Adding to the documentation
 If there's something missing, please either let us know and we'll add a new article, or if you're comfortable writing one yourself, PRs will be gratefully received.
