script helper docs

--- a/docs/source/documentation/index.html.md.erb
+++ b/docs/source/documentation/index.html.md.erb
@@ -17,5 +17,8 @@
 ## Locales and Internationalization
 - [Locales and Internationalization](documentation/locales.html)
 
+## Script Helpers 
+- [Script Helpers](documentation/script-helpers.html)
+
 ## Adding to the documentation
 If there's something missing, please either let us know and we'll add a new article, or if you're comfortable writing one yourself, PRs will be gratefully received.
