If applied, this updates the technical documentation

--- a/docs/source/documentation/features.html.md.erb
+++ b/docs/source/documentation/features.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Features
-last_reviewed_on: 2025-10-28
+last_reviewed_on: 2025-11-12
 review_in: 6 weeks
 ---
 
@@ -22,7 +22,7 @@ This application implements form validation for user inputs. You can find furthe
 
 ## CSRF protection
 
-The application uses the [csrf-sync](https://www.npmjs.com/package/csrf-sync/v/1.0.2) middleware to protect against cross-site request forgery attacks.
+The application uses the [csrf-sync](https://www.npmjs.com/package/csrf-sync) middleware to protect against cross-site request forgery attacks.
 
 ## Content Security Policy (CSP)
 
