--- a/docs/source/documentation/index.html.md.erb
+++ b/docs/source/documentation/index.html.md.erb
@@ -14,8 +14,8 @@
 ## Deployment
 - [Deployment](documentation/deployment.html)
 
-## Locales and Internationalization
-- [Locales and Internationalization](documentation/locales.html)
+## Locales and Internationalisation
+- [Locales and Internationalisation](documentation/locales.html)
 
 ## Script Helpers 
 - [Script Helpers](documentation/script-helpers.html)
