If applied, this address review comments. If no third party number provided it displays `Not provided` instead of `Not safe to contact`

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -20,14 +20,18 @@
 {% endset %}
 
 {% set phoneNumberContentThirdParty %}
-  {% if data.thirdParty.safeToCall %}
-    {{ data.thirdParty.contactNumber }}
+  {% if data.thirdParty.contactNumber %}
+    {% if data.thirdParty.safeToCall %}
+      {{ data.thirdParty.contactNumber }}
+    {% else %}
+      {{ govukWarningText({
+        text: t('forms.clientDetails.phoneNumber.notSafeToCallWarning'),
+        iconFallbackText: t.common.warning
+      }) }}
+    {% endif %}
   {% else %}
-    {{ govukWarningText({
-      text: t('forms.clientDetails.phoneNumber.notSafeToCallWarning'),
-      iconFallbackText: t.common.warning
-    }) }}
-  {% endif %}
+    {{ t('pages.caseDetails.notProvided') }}
+  {% endif%}
 {% endset %}
 
 {% macro renderAddress(address, postcode) %}
