If applied, this updates the content on third party form page

--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -98,7 +98,7 @@
 
   {{ govukInput({
     label: {
-      text: t('forms.clientDetails.address.postcode'),
+      text: t('forms.clientDetails.thirdParty.postcodeHeading'),
       classes: "govuk-text--m"
     },
     id: "thirdPartyPostcode",
