--- a/views/components/caseStatusBanner.njk
+++ b/views/components/caseStatusBanner.njk
@@ -27,7 +27,7 @@
 
 #}
 
-{%- from "@ministryofjustice/frontend/moj/components/banner/macro.njk" import mojBanner -%}
+{%- from "moj/components/banner/macro.njk" import mojBanner -%}
 
 {% macro caseStatusBanner(options) %}
   {% set bannerClasses = "moj-banner" %}
