--- a/views/components/caseStatusBanner.njk
+++ b/views/components/caseStatusBanner.njk
@@ -16,38 +16,35 @@
 
   {{ caseStatusBanner({
     type: "warning",
-    heading: "Important",
-    message: "This case is pending. Awaiting client callback. (18 Nov 2025 at 14:30)"
+    statusLabel: "pending",
+    reason: "Not ready for determination.",
+    timestamp: "14 Jun 2019 at 14:30"
   }) }}
 
   Options:
-  - type: 'warning' (red banner) or 'information' (blue banner, default)
-  - heading: Banner heading text
-  - message: Banner message content (can include HTML)
+  - type: 'warning' (red banner) or 'information' (blue banner)
+  - statusLabel: Status label for title ("pending", "closed", "completed")
+  - reason: Optional reason text
+  - timestamp: Formatted timestamp with time
 
 #}
 
 {%- from "moj/components/banner/macro.njk" import mojBanner -%}
 
 {% macro caseStatusBanner(options) %}
-  {% set bannerClasses = "moj-banner" %}
-  {% if options.type == "warning" %}
-    {% set bannerClasses = bannerClasses + " moj-banner--warning" %}
-  {% endif %}
-
-  {# Build banner content #}
+  {# Build banner content HTML #}
   {% set bannerHtml %}
-    <h2 class="govuk-heading-m">{{ options.heading }}</h2>
-    <p class="govuk-body">{{ options.message | safe }}</p>
+    <h2 class="govuk-heading-m">Case {{ options.statusLabel }}</h2>
+    {% if options.reason %}
+      <p class="govuk-body">{{ options.reason }}</p>
+    {% endif %}
+    <p class="govuk-body">{{ options.timestamp }}</p>
   {% endset %}
 
-  {# Render MOJ banner without dismiss functionality #}
-  <div class="{{ bannerClasses }}" role="region" aria-label="Case status information">
-    <svg class="moj-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-      <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-    </svg>
-    <div class="moj-banner__message">
-      {{ bannerHtml | safe }}
-    </div>
-  </div>
+  {# Render MOJ banner component #}
+  {{ mojBanner({
+    type: options.type,
+    html: bannerHtml,
+    iconFallbackText: "Case " + options.statusLabel
+  }) }}
 {% endmacro %}
