--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -4,6 +4,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/tabComponent.njk" import tabComponent %}
 
+{# TO-DO Adding this in temporarily, will be resolved in EL-2754 #}
 {% set caseStatusToStates = {
   "new": "new",
   "opened": "pending",
