--- a/views/cases/index.njk
+++ b/views/cases/index.njk
@@ -5,9 +5,8 @@
     {{ t('pages.yourCases.pageTitles.pending', { serviceName: config.SERVICE_NAME }) }}
   {%- elif activeTab == 'accepted' -%}
     {{ t('pages.yourCases.pageTitles.advising', { serviceName: config.SERVICE_NAME }) }}
-  {%- elif activeTab == 'closed' -%}
+  {%- elif activeTab == 'completed' -%}
     {{ t('pages.yourCases.pageTitles.completed', { serviceName: config.SERVICE_NAME }) }}
-  {# TO DO: This activeTab doesn't exist yet #}
   {%- elif activeTab == 'rejected' -%}
     {{ t('pages.yourCases.pageTitles.closed', { serviceName: config.SERVICE_NAME }) }}
   {%- else -%}
@@ -30,9 +29,8 @@
         {{ t('pages.yourCases.pendingCases') }}
       {%- elif activeTab == 'accepted' -%}
         {{ t('pages.yourCases.advisingCases') }}
-      {%- elif activeTab == 'closed' -%}
+      {%- elif activeTab == 'completed' -%}
         {{ t('pages.yourCases.completedCases') }}
-      {# TO DO: This activeTab doesn't exist yet #}
       {%- elif activeTab == 'rejected' -%}
         {{ t('pages.yourCases.closedCases') }}
       {%- else -%}
@@ -73,7 +71,7 @@
         partial: "cases/_closed-partial.njk"
       },
       {
-        id: "closed",
+        id: "completed",
         text: t('common.status.completed'),
         href: "/cases/completed",
         partial: "cases/_completed-partial.njk"
